test/compile_fail/effect_optional_request_without_context.zig
const shift = @import("shift");

const fake_cap = struct {};

comptime {
    _ = shift.effect.optional.request(fake_cap, 123);
}
